docker and linux shell script changes.