@@ -1,4 +1,4 @@
-#!/usr/bin/bash
+#!/bin/bash
 echo STARTING Zookeeper....
 export DEBUGPORT=4006
 if [[ ! -v DATASAMUDAYA_HOME ]]; then
@@ -7,12 +7,10 @@ if [[ ! -v DATASAMUDAYA_HOME ]]; then
 else
 	echo "DATASAMUDAYA_HOME is set as $DATASAMUDAYA_HOME"
 fi
-export CLASSPATH="-cp .:../jars/*;../yarnlib/*"
+export CLASSPATH="-cp .:$DATASAMUDAYA_HOME/jars/*:$DATASAMUDAYA_HOME/yarnlib/*"
 export DEBUGCONFIG="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=$DEBUGPORT,suspend=n"
 export CLASSNAME=com.github.datasamudaya.common.utils.ZookeeperMain
 export MEMCONFIGLOW=-Xms512m
 export MEMCONFIGHIGH=-Xmx512m
 export GCCCONFIG=-XX:+UseZGC
-export ADDOPENSMODULES="--add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.sql/java.sql=ALL-UNNAMED"
-java $ADDOPENSMODULES $CLASSPATH $MEMCONFIGLOW $MEMCONFIGHIGH $GCCCONFIG -Djava.net.preferIPv4Stack=true $CLASSNAME $@
-
+java $CLASSPATH $MEMCONFIGLOW $MEMCONFIGHIGH $GCCCONFIG -Djava.net.preferIPv4Stack=true $CLASSNAME $@
